--- a/pico-8/index.html
+++ b/pico-8/index.html
@@ -125,6 +125,30 @@
 
       <dt>Map</dt>
       <dd>128x32 cels</dd>
+
+      <hr />
+
+      <dt>display</dt>
+      <dd>128x128, fixed 16 colour palette</dd>
+
+      <dt>input</dt>
+      <dd>6 buttons</dd>
+
+      <dt>cartridge size</dt>
+      <dd>32k</dd>
+
+      <dt>sound</dt>
+      <dd>4 channel, 64 definable chip blerps</dd>
+
+      <dt>code</dt>
+      <dd>lua, max 8192 tokens of code</dd>
+
+      <dt>sprites</dt>
+      <dd>single bank of 128 8x8 sprites + 128 shared</dd>
+
+      <dt>map</dt>
+      <dd>128x32 8-bit cels + 128x32 shared</dd>
+
     </dl>
   </section>
 
