--- a/pico-8/index.html
+++ b/pico-8/index.html
@@ -55,6 +55,10 @@
       max-height: 100vh;
     }
 
+    video {
+      width: 100%;
+    }
+
     section {
       width: 100vw;
       height: 100vh;
@@ -216,6 +220,10 @@
 
   <section class="centered-slide" style="background-color: rgb(72, 52, 53)">
     <img src="assets/gameboy-carts.jpg" alt="" />
+  </section>
+
+  <section class="centered-slide">
+    <video src="assets/c64-basic.mp4" muted controls></video>
   </section>
 
   <script>
