Add celeste clip

--- a/pico-8/index.html
+++ b/pico-8/index.html
@@ -226,6 +226,10 @@
     <video src="assets/c64-basic.mp4" muted controls></video>
   </section>
 
+  <section class="centered-slide">
+    <video src="assets/celeste-clip.mp4" controls></video>
+  </section>
+
   <script>
     const first = document.querySelector('section:first-of-type')
     const last = document.querySelector('section:last-of-type')
