Add thank you slide

--- a/pico-8/index.html
+++ b/pico-8/index.html
@@ -321,6 +321,13 @@
     <div>15</div>
   </section>
 
+  <section class="centered-slide">
+    <h1>Thank you!</h1>
+    <img src="assets/01.gif" alt="" />
+    <img src="assets/02.gif" alt="" />
+    <img src="assets/03.gif" alt="" />
+  </section>
+
   <script>
     const first = document.querySelector('section:first-of-type')
     const last = document.querySelector('section:last-of-type')
