Add demo slide and CSS fix for thank you

--- a/pico-8/index.html
+++ b/pico-8/index.html
@@ -187,6 +187,12 @@
       font-size: 6rem;
     }
 
+    .thank-you {
+      text-align: center;
+      max-height: 50%;
+      margin-top: 22vh;
+    }
+
     @media screen and (min-aspect-ratio: 8/5) {
       .colors {
         grid-template: 12.5vw 12.5vw / repeat(8, 12.5%);
@@ -316,7 +322,13 @@
     <div>15</div>
   </section>
 
+
   <section class="centered-slide">
+    <h1>it's demo time!</h1>
+  </section>
+
+
+  <section class="thank-you">
     <h1>Thank you!</h1>
     <img src="assets/01.gif" alt="" />
     <img src="assets/02.gif" alt="" />
