Add celeste iframe

--- a/pico-8/index.html
+++ b/pico-8/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>My talk</title>
+  <title>Intro to PICO-8</title>
   <style>
     @font-face {
       font-family: "PICO-8";
@@ -294,9 +294,15 @@
     </dl>
   </section>
 
+
   <section class="centered-slide">
     <a href="https://www.lexaloffle.com/bbs/?tid=2145" target="_blank">Celeste</a>
+    <br>
+    <br>
+    <br>
+    <iframe src="assets/celeste.html" width="75%" height="75%"></iframe>
   </section>
+
 
   <section class="centered-slide">
     <video src="assets/celeste-trailer-ps4.mp4" controls></video>
