--- a/pico-8/index.html
+++ b/pico-8/index.html
@@ -143,6 +143,12 @@
       outline: none;
     }
 
+    iframe {
+      border-style: inset;
+      border-width: 12px;
+      border-color: var(--picolilla);
+    }
+
     .mono {
       font-family: monospace;
     }
